[package]
name = "en-parlant-relay"
version = "0.1.0"
edition = "2021"
description = "WebSocket relay server for En Parlant~ multiplayer chess"
license = "GPL-3.0"

[dependencies]
axum = "0.7"
socketioxide = { version = "0.14", features = ["state"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
